
release notes for release 0.1.0 Neon
========================================

2014-09-20 - AKHE Logfiles for general, access, security and dm actions
                    Logfiles can be viewed in the web interface
2014-08-29 - AKHE All VSCP helper lib calls now have "vscp_" ion front of them.

release notes for release 0.4.0 Fluorine
========================================

2013-11-14 - AKHE VSCP & Friends now compiles with wxWidgets 3.0.0 also, the latest greatest.
2013-10-21 - AKHE Fixed bug in vscpd that set Level II send GUID's wrong.
		  Socket CAN driver now send Level I events as expected 
			instead of class2 Level I events.
2013-10-18 - AKHE Added getMeasurementDataCoding to helper lib that 
                    returns the datacoding byte for measurement classes 
                    that have it. Use the VSCP_DATACODING_TYPE, VSCP_DATACODING_INDEX
                    and VSCP_DATACODING_UNIT macros to get individual parts in it. 
                  Added new action parameter escapes
                    %measurement.index  - index for sensor (0-7)
                    %measurement.unit   - measurement unit (0-3)
                    %measurement.coding - datacoding       (0-7)
                    %measurement.convert.data - which convert all types
                        of measurement data into a VSCP_CLASS2_MEASUREMENT_STR
                        data coding which can be easier to directly interpret
                        without code. Fixes #19
2013-10-17 - AKHE Added new action parameter escapes. 
					%event.class.str 	- Class as textstring
					%event.type.str  	- Type as teststring
					%measurement.float 	- measurement as a float
					%measurement.string	- meaurements as a string
					%eventdata.realtext	- Try to display event data in a
											human readable form.
2013-10-15 - AKHE 0.4.0.11
2013-10-15 - AKHE carambola binary build added.
2013-10-14 - AKHE Removes a bunch of non-critical warnings in ubuntu builds.