@@ -69,7 +69,8 @@ enum {
 	CLIENT_ITEM_INTERFACE_TYPE_CLIENT_TCPIP,
 	CLIENT_ITEM_INTERFACE_TYPE_CLIENT_UDP,
 	CLIENT_ITEM_INTERFACE_TYPE_CLIENT_WEB,
-	CLIENT_ITEM_INTERFACE_TYPE_CLIENT_WEBSOCKET
+	CLIENT_ITEM_INTERFACE_TYPE_CLIENT_WEBSOCKET,
+    CLIENT_ITEM_INTERFACE_TYPE_CLIENT_REST
 };
 
 /*
