@@ -728,6 +728,13 @@ bool CVariableStorage::add( const wxString& varName, const wxString& value, uint
 	name.Trim( true );
 	name.Trim( false );
 
+    // Name should not contain spaces so if it does
+    // we replace them with 'underscore'
+    size_t pos;
+    while ( wxNOT_FOUND != ( pos = strName.Find( 0x20 ) ) ) {
+        strName[pos] = '_';
+    }
+
     CVSCPVariable *pVar = new CVSCPVariable;
 	if ( NULL == pVar ) return false;
 
