@@ -2,6 +2,7 @@
 release notes for release 0.1.0 Neon
 ========================================
 
+2014-09-25 - AKHE Variables with space in there names will have the space replaced with underscore.
 2014-09-20 - AKHE Logfiles for general, access, security and dm actions
                     Logfiles can be viewed in the web interface
 2014-08-29 - AKHE All VSCP helper lib calls now have "vscp_" ion front of them.
